--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "pino-pretty": "^11.3.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-errors": "^2.0.0",
