--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-errors": "^2.0.0",
+    "import": "^0.0.6",
     "joi": "^17.13.3",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.2",
